Fixing footnote alignment on object pages

--- a/content/_assets/styles/custom.scss
+++ b/content/_assets/styles/custom.scss
@@ -704,6 +704,18 @@ q-modal q-lightbox .q-lightbox-ui .q-lightbox-ui__zoom-and-fullscreen {
 .quire-entry__tombstone tr.medium-property {
     margin-bottom: 0px;
 }
+.quire-entry {
+    .quire-page__content {
+        .container {
+            .content {
+                .footnotes {
+                    padding-left: 0;
+                    padding-right: 0;
+                }
+            }
+        }
+    }
+}
 
 
 .littlefoot {
